<resources>
    <string name="app_name">kotlin-shop</string>
    <string name="cart_header">Корзина</string>
    <string name="price_header">Цена</string>
    <string name="discount_price">Скидка</string>
    <string name="price_with_discount">Итог</string>
    <string name="discount_present">Процент</string>
    <string name="price">Цена</string>
    <string name="product_title">Title</string>
    <string name="second_name_title">Фамилия</string>
    <string name="first_name_title">Имя</string>
    <string name="third_name_title">Отчество</string>
    <string name="phone_title">Телефон</string>
    <string name="btn_buy_cart">Оформить заказ</string>
    <string name="total_price">Итог</string>
    <string name="title_header">Наименование</string>
    <string name="phone_example">Пример, 89999999999</string>
    <string name="catalog_header">Каталог</string>
    <string name="footer_title">Футер</string>
    <string name="product_image_descr">product</string>
    <string name="catalog_item_price_placeholder">Price</string>
    <string name="detailed_photo_title">detailed photo</string>
    <string name="some_text">someText</string>
    <string name="detailed_header">Превью</string>
    <string name="btn_to_cart_from_catalog">Корзина</string>
    <string name="buy_btn_title">Купить</string>
    <string name="purchase_title">Оформление заказа</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="menu_catalog_title">Каталог</string>
    <string name="menu_account_title">Аккаунт</string>
    <string name="menu_cart_title">Корзина</string>
    <string name="this_is_account_page_placeholder">This is account page</string>
    <string name="detailed_nav_title">Описание</string>
    <string name="delete_icon_iv_description">delete icon</string>
    <string name="add_catalog_item_btn_title">Добавить</string>
    <string name="catalog_add_item_sign">+</string>
    <string name="btn_to_cart_title">В КОРЗИНУ</string>
    <string name="product">product</string>
    <string name="viewed_products_title">Просмотренные товары</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="favorite_menu_title">Избранное</string>
    <string name="to_iv_favorite_placeholder">toFavorite</string>
    <string name="favorite_icon_description">favorite icon</string>
    <string name="find_search_placeholder">Найти …</string>
    <string name="back">back</string>
    <string name="count">count</string>
    <string name="count_text_cart">Кол-во</string>
    <string name="cart_total_title">Итог:</string>
    <string name="orders">Заказы</string>
    <string name="online_bank_card">Онлайн банковской картой</string>
    <string name="offline_by_money">Наличными при получении</string>
    <string name="choose_payment_type">Выберите способ оплаты</string>
    <string name="customer">Покупатель:</string>
    <string name="payment_type">Способ оплаты:</string>
    <string name="total">Итог:</string>
    <string name="phone">Телефон:</string>
    <string name="description">Описание</string>
    <string name="tech">Характеристики</string>
    <string name="arrow">arrow</string>
    <string name="guitar">guitar</string>
    <string name="show_all_products">Просмотреть все товары</string>
</resources>
