<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSerNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/second_name_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSerName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/tvSerNameTitle"
        app:layout_constraintLeft_toRightOf="@id/tvSerNameTitle"

        app:layout_constraintTop_toTopOf="@id/tvSerNameTitle" />

    <TextView
        android:id="@+id/tvFirstNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/first_name_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSerNameTitle" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/tvFirstNameTitle"
        app:layout_constraintLeft_toRightOf="@id/tvFirstNameTitle"

        app:layout_constraintTop_toTopOf="@id/tvFirstNameTitle" />

    <TextView
        android:id="@+id/tvPhoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstNameTitle" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@id/tvPhoneTitle"
        app:layout_constraintLeft_toRightOf="@id/tvPhoneTitle"

        app:layout_constraintTop_toTopOf="@id/tvPhoneTitle" />

    <TextView
        android:id="@+id/tvOrderPhoneExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/phone_example"
        app:layout_constraintBottom_toTopOf="@id/btnBuy"
        app:layout_constraintLeft_toLeftOf="@id/etPhone"
        app:layout_constraintRight_toRightOf="@id/etPhone"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rgOrderPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrderPhoneExample">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/choose_payment_type"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbOrderOnlineCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/online_bank_card" />

        <RadioButton
            android:id="@+id/rbOrderOfflineMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/offline_by_money" />
    </RadioGroup>

    <Button
        android:id="@+id/btnBuy"
        style="@style/bigPrimaryBackground"
        android:text="@string/buy_btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>