<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CartFragment">

    <TextView
        android:id="@+id/tvHeaderProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/title_header"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeaderProductPrice"
        app:layout_constraintLeft_toRightOf="@id/tvHeaderProductName"
        app:layout_constraintTop_toTopOf="@id/tvHeaderProductName"
        app:layout_constraintBottom_toBottomOf="@id/tvHeaderProductName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="70dp"
        android:text="@string/price_header"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnApply"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderProductName"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/btnApply"
        android:layout_margin="10dp"
        style="@style/bigPrimaryBackground"
        android:text="@string/btn_buy_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>